# legal-mapping

./: .env.template  .gitignore  build_themes.py  deal-visualization.html  index.html  modern.html  original.html  pyproject.toml  requirements.md
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml
Reference/: Legal Mapping Idea.txt
deals/test-acme-acquisition/: deal-analysis.json  deal-graph.json  theme-dark-professional.html  theme-warm-elegant.html  visualization.html
planning/: deep_project_interview.md  project-manifest.md
planning/01-data-model-extraction/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/02-semantic-analysis/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/03-interactive-visualization/: claude-interview.md  (+7 more)
scripts/: build-pages.py
src/: cli.py
tests/: conftest.py  test_analysis_schemas.py  test_cli.py  test_conditions_precedent.py  test_conflict_detection.py  test_defined_terms.py  test_dependency_resolver.py  test_document_readers.py  test_execution_sequence.py  test_extraction.py  test_foundation.py  test_graph_manager.py  test_graph_utils.py  test_hierarchy.py  test_merger.py  test_orchestrator.py  test_pipeline.py  test_prompts.py  test_scale.py  test_schema.py  test_section_normalize.py  test_source_text.py  test_staleness.py  test_synthetic_deal.py  test_visualization_contract.py
(+104 files in other folders)
